manifests/stavloi.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stavloi
  labels:
    app: stavloi
spec:
  replicas: 2
  selector:
    matchLabels:
      app: stavloi
  template:
    metadata:
      labels:
        app: stavloi
    spec:
      containers:
        - name: stavloi
          image: vaggelas/stavloi:5.12
          resources:
            requests:
              memory: "10Mi"
              cpu: "5m"
            limits:
              memory: "20Mi"
              cpu: "10m"
          ports:
            - containerPort: 8080
