manifests/stavloi.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stavloi
spec:
  selector:
    app: stavloi
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      nodePort: 30007
