manifests/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingress-stavloi
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`stavloi.gr`)
      kind: Rule
      services:
        - name: stavloi
          port: 80
